# lightdm-budgie-greeter

./: .gitignore  Makefile.am  README.md  configure.ac
data/: budgie-greeter.gresource.xml  styling.css
src/: greeter-window.c  greeter-window.h  main.c  util.h
